Personal Portfolio Update and Technical Documentation styles update

--- a/Responsive_Web_Design/3_Build_a_Technical_Documentation/styles.css
+++ b/Responsive_Web_Design/3_Build_a_Technical_Documentation/styles.css
@@ -104,11 +104,11 @@ body {
 }
 
 #container {
-  z-index: -3;
+  /* z-index: -3; */
   float: right;
   width: 100%;
   position: fixed;
-  height: 70vh;
+  height: 78vh;
   overflow-y: scroll;
   top: 120px;
 }
