--- a/Responsive_Web_Design/5_Build_a_Personal_Portfolio_Webpage/styles.css
+++ b/Responsive_Web_Design/5_Build_a_Personal_Portfolio_Webpage/styles.css
@@ -4,10 +4,15 @@
   --color-primary-dark: #208c61;
   --color-bg-primary: #1a1a1a;
   --color-bg-secondary: #242424;
+  --color-bg-fsec: #242424;
   --color-bg-footer: #151515;
+  --color-heading: #ffffff;
   --color-white: #ffffff;
-  --color-text: #676767;
+  --color-text: #6a797c;
+  --color-icon: #ffffff;
   --color-border: #373737;
+  --color-btn: #ffffff;
+  --light-theme: rgb(220, 220, 139);
 
   /* Font & Typography */
   --ff-body: "Space Grotesk", sans-serif;
@@ -32,6 +37,7 @@
   /* z-index */
   --zindex-menu: 1000;
   --zindex-fixed: 1010;
+  --zindex-tooltip: 10;
 
   /* Width & Height */
   --width-container: 98rem;
@@ -40,7 +46,39 @@
 
   /* Transition and box shadow */
   --transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  --box-shadow: none;
+}
+
+/* Variables Dark theme */
+body.light-theme {
+  /* HSL color mode */
+  --color-primary: #25ab75;
+  --color-primary-dark: #208c61;
+  --color-bg-primary: #ffffff;
+  --color-bg-secondary: #d4efe5;
+  --color-bg-fsec: #ffffff;
+  --color-bg-footer: #e1e1e1;
+  --color-heading: #232829;
+  --color-white: #ffffff;
+  --color-text: #605f5f;
+  --color-icon: #208c61;
+  --color-btn: #232829;
+  --color-border: #6fab94;
+  --light-theme: #0b0707;
   --box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.change-theme {
+  position: absolute;
+  left: 95%;
+  font-size: 2rem;
+  color: var(--light-theme);
+  margin-right: var(--mb-1);
+  cursor: pointer;
+}
+
+.change-theme:hover {
+  color: var(--color-primary);
 }
 
 *,
@@ -53,7 +91,7 @@ h1,
 h2,
 h3,
 h4 {
-  color: var(--color-white);
+  color: var(--color-heading);
   font-weight: var(--fw-bold);
 }
 
@@ -84,11 +122,12 @@ img {
 
 a {
   text-decoration: none;
-  color: var(--color-text);
+  color: var(--color-heading);
 }
 
 main {
   overflow: hidden;
+  margin-top: 2rem;
 }
 
 body {
@@ -142,33 +181,6 @@ body {
   gap: 3rem;
 }
 
-.btn {
-  display: inline-block;
-  padding: 1.5rem 4rem;
-  color: var(--color-white);
-  font-weight: var(--fw-semibold);
-  transition: var(--transition);
-}
-
-.btn--primary {
-  background-color: var(--color-primary);
-  color: var(--color-white);
-}
-
-.btn--primary:hover {
-  background-color: var(--color-primary-dark);
-}
-
-.btn--secondary {
-  background-color: var(--color-white);
-  color: var(--color-bg-primary);
-}
-
-.btn--secondary:hover {
-  background-color: var(--color-primary);
-  color: var(--color-white);
-}
-
 /* Header */
 #navbar {
   background-color: var(--color-bg-primary);
@@ -181,6 +193,7 @@ body {
   height: var(--height-header);
   z-index: var(--zindex-menu);
   transition: var(--transition);
+  box-shadow: var(--box-shadow);
 }
 
 .header--scroll {
@@ -206,12 +219,13 @@ body {
 }
 
 .nav-name i {
-  color: var(--color-white);
+  color: var(--color-heading);
 }
 
 .nav-list {
   display: flex;
   column-gap: 4rem;
+  font-weight: var(--fw-medium);
 }
 
 .nav-link {
@@ -225,7 +239,7 @@ body {
 .nav_toggle {
   display: none;
   font-size: var(--fs-xl);
-  color: var(--color-white);
+  color: var(--color-icon);
   cursor: pointer;
   transition: var(--transition);
 }
@@ -265,16 +279,21 @@ body {
   .nav_toggle {
     z-index: var(--zindex-fixed);
   }
+
+  .change-theme {
+    position: fixed;
+    display: block;
+  }
 }
 
-/* Hero
---------------------------------------------------------------*/
+/* Home */
 .welcome-wrapper {
   min-height: calc(100vh - var(--height-header));
   padding: 5rem 0;
 }
 
 .welcome-content {
+  padding-top: 4rem;
   text-align: center;
 }
 
@@ -311,7 +330,7 @@ body {
 .intro-info-number {
   font-size: var(--fs-xxl);
   font-weight: var(--fw-bold);
-  color: var(--color-white);
+  color: var(--color-heading);
   margin-bottom: 1rem;
 }
 
@@ -321,6 +340,34 @@ body {
   color: var(--color-text);
 }
 
+.home-scroll {
+  display: none;
+}
+
+.home-scroll-button {
+  color: var(--color-primary);
+  transition: 0.3s;
+}
+
+.home-scroll-button:hover {
+  transform: translateY(0.25rem);
+}
+
+.home-scroll-mouse {
+  font-size: 2.5rem;
+}
+
+.home-scroll-name {
+  font-size: var(--fs-md);
+  color: var(--color-heading);
+  font-weight: var(--fw-medium);
+  margin-right: var(--mb-0-25);
+}
+
+.home-scroll-arrow {
+  font-size: 2rem;
+}
+
 @media screen and (max-width: 968px) {
   .intro-img {
     width: 280px;
@@ -328,8 +375,7 @@ body {
   }
 }
 
-/* About
---------------------------------------------------------------*/
+/* About */
 .about-content {
   max-width: 50rem;
   margin: auto;
@@ -346,6 +392,7 @@ body {
   margin-bottom: 3rem;
 }
 
+/* Skills */
 .skills {
   justify-self: center;
 }
@@ -450,15 +497,41 @@ body {
 .qualification-footer-text {
   font-size: var(--fs-xl);
   font-weight: var(--fw-bold);
-  color: var(--color-white);
+  color: var(--color-heading);
   margin-bottom: 2rem;
 }
 
 /* Buttons */
+.btn {
+  display: inline-block;
+  padding: 1.5rem 4rem;
+  color: var(--color-white);
+  font-weight: var(--fw-semibold);
+  transition: var(--transition);
+}
+
+.btn--primary {
+  background-color: var(--color-primary);
+  color: var(--color-white);
+}
+
+.btn--primary:hover {
+  background-color: var(--color-primary-dark);
+}
+
+.btn--secondary {
+  background-color: var(--color-btn);
+  color: var(--color-bg-primary);
+}
+
+.btn--secondary:hover {
+  background-color: var(--color-primary);
+  color: var(--color-white);
+}
 
 .button {
   display: inline-block;
-  background-color: var(--color-text);
+  background-color: var(--color-primary);
   color: #ffff;
   padding: 1rem;
   border-radius: 0.5rem;
@@ -466,10 +539,10 @@ body {
 }
 
 .button:hover {
-  background-color: var(--color-white);
+  background-color: var(--color-primary-dark);
 }
 
-.button__icon {
+.button-icon {
   font-size: 1.2rem;
   margin-left: var(--mb-1);
   transition: 0.3s;
@@ -505,8 +578,8 @@ body {
   color: var(--color-white);
 }
 
-/* Services */
-.service__card {
+/* Experiences */
+.experience-card {
   background-color: var(--color-bg-secondary);
   box-shadow: var(--box-shadow);
   padding: 5rem 3.5rem;
@@ -516,35 +589,35 @@ body {
   transition: var(--transition);
 }
 
-.service__card:hover {
+.experience-card:hover {
   background-color: var(--color-primary);
 }
 
-.service__card:hover .service__link {
+.experience-card:hover .experience__link {
   color: var(--color-white);
 }
 
-.service__icon {
+.experience-icon {
   font-size: 3.5rem;
-  color: var(--color-white);
+  color: var(--color-icon);
   margin-bottom: 1.5rem;
 }
 
-.service__title {
+.experience-title {
   font-size: var(--fs-lg);
   margin-bottom: 3rem;
 }
 
-.services__button {
+.experience-button {
   cursor: pointer;
   font-size: var(--fs-sm);
 }
 
-.services__button:hover .button__icon {
+.experience-button:hover .button-icon {
   transform: translateX(0.25rem);
 }
 
-.services__modal {
+.experience-modal {
   position: fixed;
   top: 0;
   left: 0;
@@ -561,29 +634,29 @@ body {
   transition: 0.3s;
 }
 
-.services__modal-content {
+.experience-modal-content {
   position: relative;
   background-color: var(--color-bg-secondary);
   padding: 2.5rem 1.5rem 1.5rem 1.5rem;
   border-radius: 0.5rem;
 }
 
-.services__modal-services {
+.experience-modal-experiences {
   row-gap: 2rem;
 }
 
-.services__modal-service {
+.experience-modal-experience {
   display: flex;
   line-height: 2.5rem;
 }
 
-.services__modal-title {
+.experience-modal-title {
   font-size: var(--fs-lg);
   font-weight: var(--fw-medium);
   margin-bottom: var(--mb-1-5);
 }
 
-.services__modal-close {
+.experience-modal-close {
   position: absolute;
   top: 2.5rem;
   right: 1rem;
@@ -592,7 +665,7 @@ body {
   cursor: pointer;
 }
 
-.services__modal-icon {
+.experience-modal-icon {
   color: var(--color-primary-dark);
   margin-right: var(--mb-0-25);
 }
@@ -602,169 +675,174 @@ body {
   visibility: visible;
 }
 
-/* Projects
---------------------------------------------------------------*/
-.project__content {
+/* Projects */
+.project-content {
   width: 100%;
   max-width: 30rem;
   justify-self: center;
 }
 
-.project__img {
+.project-img {
   margin-bottom: 2rem;
 }
 
 .project__title {
-  color: var(--color-white);
+  color: var(--color-heading);
   font-size: var(--fs-lg);
   margin-bottom: 1rem;
 }
 
-.project__description {
+.project-description {
   margin-bottom: 2rem;
 }
 
-.project__link {
+.project-link {
   font-size: var(--fs-sm);
   text-transform: uppercase;
-  color: var(--color-white);
+  color: var(--color-icon);
   display: flex;
   align-items: center;
   column-gap: 0.5rem;
   transition: var(--transition);
 }
 
-.project__link:hover {
+.project-link:hover {
   color: var(--color-primary);
   column-gap: 1rem;
 }
 
-/* Testimonials
---------------------------------------------------------------*/
-.testimonial__card {
-  background-color: var(--color-bg-secondary);
-  box-shadow: var(--box-shadow);
-  padding: 3rem 5rem;
-  width: 100%;
-  max-width: 50rem;
-  text-align: center;
-  justify-self: center;
-  margin-bottom: 2rem;
-}
-
-.testimonial__img {
-  max-width: 10rem;
-  border-radius: 50%;
-  margin: auto;
-  margin-bottom: 3rem;
-}
-
-.testimonial__description {
-  color: var(--color-white);
-  margin-bottom: 3rem;
-}
-
-.testimonial__name {
-  font-size: var(--fs-md);
-  margin-bottom: 0.5rem;
-}
-
-.testimonial__occupation {
-  font-size: var(--fs-sm);
-}
-
-/* testimonial slide */
-.testimonial__wrapper .swiper-wrapper {
-  padding-bottom: 5rem;
-}
-
-.testimonial__wrapper .swiper-pagination-bullets {
-  justify-content: space-around;
-}
-
-.testimonial__wrapper .swiper-pagination-bullet {
-  background-color: var(--color-text);
-  border-radius: 0;
-  width: 3rem;
-  height: 0.5rem;
-}
-
-.testimonial__wrapper .swiper-pagination-bullet-active {
-  background-color: var(--color-primary);
+.project-show-btn {
+  margin-top: 7rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Contact
 --------------------------------------------------------------*/
-.contact__wrapper {
+.contact-wrapper {
   border-top: 1px solid var(--color-border);
   padding-top: 3rem;
   text-align: center;
 }
 
-.contact__title {
+.contact-title {
   font-size: var(--fs-xxl);
   margin-bottom: 2rem;
 }
 
-.contact__content {
+.contact-content {
   max-width: 45rem;
   margin: auto;
 }
 
-.contact__description {
+.contact-description {
   margin-bottom: 2rem;
 }
 
-/* Footer
---------------------------------------------------------------*/
+.contactform-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contactform-input {
+  width: 100%;
+  background-color: var(--color-bg-secondary);
+  color: var(--text-color);
+  font-family: var(--ff-body);
+  font-size: var(--fs-md);
+  border: none;
+  outline: none;
+  padding: 0.25rem 0.5rem 0.5rem 0;
+}
+
+.contactform-label {
+  font-size: var(--fs-sm);
+  color: var(--color-icon);
+}
+
+.contactform-content {
+  background-color: var(--color-bg-secondary);
+  border-radius: 0.5rem;
+  padding: 0.75rem 1rem 0.25rem;
+}
+
+/* Footer */
 .footer {
   background-color: var(--color-bg-footer);
   padding: 5rem 0;
 }
 
-.footer__wrapper {
-  border-bottom: 1px solid var(--color-bg-secondary);
+.footer-wrapper {
+  border-bottom: 1px solid var(--color-bg-fsec);
   padding: 5rem 0;
   gap: 5rem;
 }
 
-.footer__title {
+.footer-title {
   font-size: var(--fs-lg);
   margin-bottom: 2rem;
 }
 
-.footer__social-list {
+.footer-social-list {
   display: flex;
   gap: 3rem;
 }
 
-.footer__social-link {
+.footer-social-link {
   font-size: 2rem;
-  color: var(--color-white);
+  color: var(--color-icon);
   transition: var(--transition);
 }
 
-.footer__contact {
+.footer-contact {
   font-size: var(--fs-lg);
-  color: var(--color-white);
+  color: var(--color-icon);
   font-weight: var(--fw-bold);
   text-decoration: underline;
   transition: var(--transition);
 }
 
-.footer__social-link:hover,
-.footer__contact:hover {
+.footer-social-link:hover,
+.footer-contact:hover {
   color: var(--color-primary);
 }
 
-.footer__copyright {
+.footer-copyright {
   font-size: var(--fs-sm);
   text-align: center;
   padding-top: 3rem;
 }
 
-/* Scrollbar
---------------------------------------------------------------*/
+/* Scroll Up */
+.scrollup {
+  position: fixed;
+  right: 1rem;
+  bottom: -20%;
+  background-color: var(--color-primary);
+  opacity: 0.8;
+  padding: 0.5rem 0.8rem;
+  border-radius: 0.4rem;
+  z-index: var(--z-tooltip);
+  transition: 0.4s;
+}
+
+.scrollup:hover {
+  background-color: var(--color-primary-dark);
+}
+
+.scrollup-icon {
+  font-size: 1.5rem;
+  color: #fff;
+}
+
+/* Show scroll */
+.show-scroll {
+  bottom: 5rem;
+}
+
+/* Scrollbar */
 ::-webkit-scrollbar {
   width: 1rem;
   border-radius: 0.5rem;
@@ -780,12 +858,15 @@ body {
   background-color: var(--color-primary);
 }
 
-/* Breakpoints
---------------------------------------------------------------*/
+/* Breakpoints */
 
 /* Medium devices*/
 @media screen and (min-width: 560px) {
-  .service__wrapper {
+  .home-scroll {
+    display: block;
+  }
+
+  .experience-wrapper {
     grid-template-columns: repeat(2, 250px);
     justify-content: center;
   }
@@ -805,12 +886,12 @@ body {
     margin: 0;
   }
 
-  .project__wrapper {
+  .project-wrapper {
     grid-template-columns: repeat(2, 250px);
     justify-content: center;
   }
 
-  .footer__wrapper {
+  .footer-wrapper {
     grid-template-columns: repeat(2, 1fr);
   }
 }
@@ -838,15 +919,19 @@ body {
     justify-self: flex-end;
   }
 
-  .services__modal-content {
+  .experience-modal-content {
     width: calc(100vw - 65%);
     height: calc(100vh - 25px);
     overflow-y: scroll;
   }
+
+  .active-link {
+    color: var(--color-primary);
+  }
 }
 
 @media screen and (max-width: 590px) {
-  .services__modal-content {
+  .experience-modal-content {
     width: calc(100vw - 20%);
     height: calc(100vh - 10%);
     overflow-y: scroll;
@@ -870,23 +955,33 @@ body {
   }
 
   .qualification-content,
-  .service__wrapper,
-  .project__wrapper {
+  .experience-wrapper,
+  .project-wrapper {
     grid-template-columns: repeat(3, 1fr);
   }
 
-  .contact__wrapper {
+  .contact-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
 
-  .contact__content {
+  .contact-content {
     margin: 0;
     text-align: initial;
   }
 
-  .footer__wrapper {
+  .footer-wrapper {
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .contact-form {
+    width: 460px;
+  }
+
+  .contactform-inputs {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
