--- a/Responsive_Web_Design/2_Build_a_Tribute_Page/styles.css
+++ b/Responsive_Web_Design/2_Build_a_Tribute_Page/styles.css
@@ -101,7 +101,8 @@ cite {
 
 .link:last-child {
   margin-top: -15px;
-  display: inline-block;
+  display: block;
+  text-align: center;
 }
 
 #tribute-link {
