--- a/Responsive_Web_Design/1_Build_a_survey_form/styles.css
+++ b/Responsive_Web_Design/1_Build_a_survey_form/styles.css
@@ -121,7 +121,7 @@ input[type="submit"]:hover {
 footer {
   text-align: center;
   font-size: 14px;
-  margin-bottom: 2rem;
+  padding-bottom: 1rem;
 }
 
 strong:hover {
